# KML-TOWN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _compile.cmd  call-briefer.cpp  call-briefer.h  compile.sh  linux-compile.sh  linux-run.sh  main.cpp  menu.cpp  menu.h  mini-tool.cpp  mini-tool.h  run.sh  win-compile.bat  win-run.bat
test/: .gitignore  CSV-MULTI-DOC-TEST.kml  chat.kml  chat.txt  edited-sheet.csv  in-test.xml  measured.kml  messy-sharelocs.txt  out-test.xml  placemarks.kml  sheet.csv  test-in.kml  test-out.kml  win-test-xml.bat
test/linux-terminal/: kml-classify.sh  kml-crop.sh  kml-csv-change-separator.sh  kml-csv.sh  kml-filter-string.sh  kml-folder-by-date.sh  kml-folder-by-text.sh  kml-measure-paths.sh  kml-twins-check.sh  txt-kml.sh
test/win-cmd/: kml-classify.bat  (+15 more)
tools/: CMakeLists.txt
tools/csv/: builder.cpp  builder.h  csv.h  util.cpp  util.h
tools/kml/: builder.cpp  builder.h  classifier.cpp  classifier.h  converter.cpp  converter.h  create.h  cropper.cpp  cropper.h  date-folder.cpp  date-folder.h  general.cpp  general.h  kml.cpp  kml.h  pin-icon-strings.h  placemark.cpp  placemark.h  point.cpp  point.h  sorter.cpp  sorter.h  style-strings.cpp  style-strings.h  twins-checker.cpp  twins-checker.h
tools/txt/: coordinate-dating.cpp  coordinate-dating.h  samples.cpp  samples.h  scanner.cpp  scanner.h  sorter.h  txt.h
tools/xml/: node.cpp  node.h  reader.cpp  reader.h  writer.cpp  writer.h  xml.h
wrappers/: CMakeLists.txt  call-briefer.cpp  call-briefer.h  definitions.h  menu.cpp  menu.h  mini-tool.cpp  mini-tool.h  mini-tool.tpp
