add_library( tools STATIC
  xml/node.cpp
  xml/reader.cpp
  xml/writer.cpp
  kml/general.cpp
	kml/style-strings.cpp
	kml/converter.cpp
	kml/point.cpp
	kml/builder.cpp
	kml/placemark.cpp
	kml/cropper.cpp
	kml/sorter.cpp
	kml/twins-checker.cpp
	kml/classifier.cpp
	kml/date-folder.cpp
	csv/util.cpp
  csv/builder.cpp
  txt/samples.cpp
  txt/scanner.cpp
  txt/coordinate-dating.cpp
)
